--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI Quiz Generator</title>
+    <title>Quizify</title>
     <link rel="stylesheet" href="styles.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.min.js"></script>
     <script>
@@ -28,12 +28,12 @@
             <div class="loader"></div>
             <p>Generating your quiz...</p>
         </div>
-        <h1>AI Quiz Generator</h1>
+        <h1>Quizify</h1>
         
         <!-- Quiz Generation Form -->
         <form id="quizForm" class="quiz-form">
             <div class="form-group">
-                <label for="textInput">Enter Text or</label>
+                <label for="textInput">Enter Text</label>
                 <textarea id="textInput" rows="4" placeholder="Enter the text you want to generate questions from..."></textarea>
             </div>
 
