--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             <div class="loader"></div>
             <p>Generating your quiz...</p>
         </div>
+
         <h1>Quizify</h1>
         
         <!-- Quiz Generation Form -->
@@ -65,6 +66,29 @@
                     <option value="hard">Hard</option>
                     <option value="expert">Expert</option>
                 </select>
+            </div>
+
+            <div class="form-group">
+                <label for="questionType">Question Type:</label>
+                <select id="questionType" class="form-select">
+                    <option value="multiple-choice">Multiple Choice</option>
+                    <option value="free-response">Free Response</option>
+                    <option value="mixed">Mixed</option>
+                </select>
+            </div>
+
+            <div class="form-group">
+                <div class="timer-toggle">
+                    <label class="switch">
+                        <input type="checkbox" id="timerToggle">
+                        <span class="slider round"></span>
+                    </label>
+                    <span>Enable Timer</span>
+                </div>
+                <div id="timerSettings" class="hidden">
+                    <label for="timerMinutes">Time Limit (minutes):</label>
+                    <input type="number" id="timerMinutes" min="1" max="180" value="30">
+                </div>
             </div>
 
             <button type="submit" id="generateBtn" class="btn">Generate Quiz</button>
