--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <div class="container">
         <div class="about-link">
-            <button id="aboutBtn" class="about-btn">About</button>
+            <button id="aboutBtn" class="about-btn">About Site</button>
         </div>
         <!-- Theme Toggle Button -->
         <button id="themeToggle" class="theme-toggle">
@@ -58,7 +58,26 @@
 
             <div class="form-group">
                 <label for="questionCount">Number of Questions:</label>
-                <input type="number" id="questionCount" min="1" max="30" value="5">
+                <div class="number-input-wrapper">
+                    <input type="number" 
+                           id="questionCount" 
+                           min="1" 
+                           max="30" 
+                           value="5"
+                           placeholder="Enter number (1-30)">
+                    <div class="number-controls">
+                        <button type="button" class="number-control-btn" onclick="decrementQuestions()">
+                            <svg width="16" height="16" viewBox="0 0 24 24" fill="currentColor">
+                                <path d="M19 13H5v-2h14v2z"/>
+                            </svg>
+                        </button>
+                        <button type="button" class="number-control-btn" onclick="incrementQuestions()">
+                            <svg width="16" height="16" viewBox="0 0 24 24" fill="currentColor">
+                                <path d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"/>
+                            </svg>
+                        </button>
+                    </div>
+                </div>
             </div>
 
             <div class="form-group">
@@ -117,11 +136,21 @@
 
         <!-- Results Section -->
         <section id="resultsSection" class="results-section hidden">
-            <h2>Quiz Results</h2>
-            <div id="resultsContainer">
-                <!-- Results will be dynamically inserted here -->
+            <div class="results-content">
+                <div class="total-score">
+                    <h2>Quiz Results</h2>
+                    <div class="score-display">
+                        <span class="score-number">0%</span>
+                        <span class="score-details">0 out of 0 correct</span>
+                    </div>
+                </div>
+                <div id="resultsContainer">
+                    <!-- Results will be dynamically inserted here -->
+                </div>
+                <div class="results-buttons">
+                    <button type="button" id="newQuiz" class="btn">Generate New Quiz</button>
+                </div>
             </div>
-            <button type="button" id="newQuiz" class="btn">Generate New Quiz</button>
         </section>
     </div>
     <div id="aboutModal" class="modal hidden">
